--- a/index.html
+++ b/index.html
@@ -176,18 +176,18 @@
       <tbody>
         <!-- First row pre-populated -->
         <tr>
-          <td><input type="text" name="desc" value="Rent/Mortgage"></td>
+          <td><input type="text" name="desc" value="Christmas"></td>
           <td><input type="number" name="annual" class="annual-input" value="12000"></td>
           <td><input type="number" name="monthly" class="monthly-input" readonly></td>
         </tr>
         <tr>
-          <td><input type="text" name="desc" value="Utilities"></td>
-          <td><input type="number" name="annual" class="annual-input" value="2400"></td>
+          <td><input type="text" name="desc" value=""></td>
+          <td><input type="number" name="annual" class="annual-input" value=""></td>
           <td><input type="number" name="monthly" class="monthly-input" readonly></td>
         </tr>
         <tr>
-          <td><input type="text" name="desc" value="Groceries"></td>
-          <td><input type="number" name="annual" class="annual-input" value="5200"></td>
+          <td><input type="text" name="desc" value=""></td>
+          <td><input type="number" name="annual" class="annual-input" value=""></td>
           <td><input type="number" name="monthly" class="monthly-input" readonly></td>
         </tr>
         <!-- Totals row -->
